[package]
name = "float-cmp"
version = "0.2.4"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "Floating point approximate comparison traits"
repository = "https://github.com/mikedilger/float-cmp"
documentation = "https://mikedilger.github.io/float-cmp"
readme = "README.md"
keywords = [ "float", "comparison", "fuzzy", "approximate" ]
license = "MIT"

[lib]
name = "float_cmp"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
num = { version = "0.1", default-features = false }
