[package]
name = "float-cmp"
version = "0.4.0"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "Floating point approximate comparison traits"
repository = "https://github.com/mikedilger/float-cmp"
documentation = "https://docs.rs/float-cmp"
readme = "README.md"
keywords = [ "float", "comparison", "fuzzy", "approximate" ]
license = "MIT"

[lib]
name = "float_cmp"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
num-traits = { version = "0.2", default-features = false }
